--- a/templates/shorten.html
+++ b/templates/shorten.html
@@ -18,7 +18,7 @@
 <body class="bg-dark text-white d-flex flex-column justify-content-center align-items-center vh-100 text-center">
     <img src="/static/images/gpt-bg.png" class="img-fluid rounded mb-4" alt="Centered Image" width="40%">
     <div class="alert alert-primary w-50" role="alert">
-        URL Shortening Completed. Link: <a href="{{link}}" class="alert-link">{{link}}</a>
+        URL Shortening Completed. Link: <a href="{{text}}" class="alert-link">{{text}}</a>
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
